feat:集成chatgpt配置